# Microgit-v2

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  vcs_gui.py
cmake/: check_json.cpp
cmd/: add.cpp  add.hpp  checkout.cpp  checkout.hpp  init.cpp  init.hpp  log.cpp  log.hpp  remove.cpp  remove.hpp  root.cpp  root.hpp  save.cpp  save.hpp  status.cpp  status.hpp
utils/: json.cpp  json.hpp  main.cpp  main.hpp
